Fixed spacing issue due to absolute positioning

--- a/style/index.css
+++ b/style/index.css
@@ -75,7 +75,7 @@ h2 {
 #top {
     display: flex;
     justify-content: space-between;
-    padding: 2% 0.9%
+    padding: 2% 2%;
 }
 
 #top * {
@@ -109,13 +109,22 @@ a#selected{
     display:table;
 }
 
+
+.hidden img{
+    visibility: hidden;
+    width: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 100%;
+    text-align:center;
+}
+
 .imageContainer img{
     width:50%;
     position: absolute;
+    transform: translate(-50%);
     text-align:center;
-    top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%)
+
 }
 
 .overlay {
@@ -149,4 +158,15 @@ a#selected{
     text-decoration: none;
 
     color: #8F84BE;
+}
+
+/* Project styles */
+.Projects {
+    position:relative;
+}
+
+.Projects ul {
+    display:flex;
+    align-items: stretch;
+    justify-content: space-between;
 }
